# backend

./: .dockerignore  .env.nginx.dev  .env.nginx.local  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-testing  README.md  docker-compose.dev.yml  docker-compose.development.window.yml  docker-compose.development.yml  docker-compose.local.yml  docker-compose.production.window.yml  docker-compose.testing.yml  dockerfile-development  dockerfile-development-window  dockerfile-local  dockerfile-production-window  dockerfile-testing  insert real_estate.sql  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_indexer.py
.github/workflows/: django-dev.yml  django-development.yml  django-prod.yml  django-production.yml  django-testing.yml  django.yml
.scripts/: docker-deploy-dev.sh
accounts/: forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/util/: authenticator.py
app/: models.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_news.py
app/services/: collect_property_news.py  collect_sale_price_of_villa_service.py
app/views/: news_views.py
manticore/: manticore.conf  manticore.conf.template  manticore_client.py  manticore_local.conf  manticore_testing.conf  replace_manticore_conf.py  run_indexer.sh  run_indexer_local.sh
manticore/production/: manticore.conf.production.template
modu_property/: __init__.py  asgi.py  celery.py  container.py  prod_settings.py  schema.py  settings.py  tasks.py  test_settings.py  testing_settings.py  urls.py  wsgi.py
modu_property/settings/: base_settings.py  development_settings.py  development_window_settings.py  prod_settings.py  production_settings.py  production_window_settings.py  test_settings.py  testing_settings.py
modu_property/utils/: address.py  file.py  loggers.py  time.py  validator.py
mysite/: __init__.py  settings.py  tasks.py  urls.py
mysite/utils/: logger.py
nginx/: nginx.dev.conf  nginx.development.conf  nginx.development.window.conf  nginx.local.conf  nginx.production.window.conf  nginx.testing.conf
property/: apps.py  models.py  serializers.py
property/dto/: villa_dto.py
property/migrations/: 0001_initial.py
property/services/: collect_deal_price_of_villa_service.py  get_deal_price_of_villa_service.py
property/views/: news_views.py  villa_views.py
real_estate/: apps.py  container.py  exceptions.py  models.py  serializers.py
real_estate/containers/: container.py  get_real_estates_on_search_service_container.py  repository_container.py  search_container.py  search_real_estates_container.py  service_container.py  third_party_container.py  util_container.py
real_estate/dto/: collect_address_dto.py  collect_region_price_dto.py  get_real_estate_dto.py  real_estate_dto.py  service_result_dto.py
real_estate/enum/: deal_enum.py  property_type_enum.py  real_estate_enum.py  trade_type_enum.py
real_estate/migrations/: 0001_initial.py  0002_deal_realestate_monthlyrent_deal_real_estate.py  0002_regionprice.py  0003_deal_monthly_rent_alter_deal_area_for_exclusive_use_and_more.py
real_estate/repository/: real_estate_repository.py
real_estate/schema/: manticore_view_schema.py  real_estate_view_schema.py
real_estate/services/: __init__.py  calc_region_price_service.py  collect_address_service.py  collect_deal_price_of_real_estate_service.py  collect_region_price_service.py  collect_region_service.py  get_deal_price_of_real_estate_service.py  get_deals_service.py  get_real_estate_service.py  get_real_estates.py  get_real_estates_on_map_service.py  get_real_estates_on_search_service.py  get_real_estates_service.py  insert_address_service.py  search_real_estates.py  search_real_estates_service.py  set_real_estates.py  set_real_estates_service.py  (+1 more)
tests/: conftest.py  fixture.py  fixtures.py  test_print.py
(+55 files in other folders)
