[tool.poetry]
name = "modu-property"
version = "0.1.0"
description = ""
authors = ["copyNdpaste <samnaka@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
amqp = "^5.2.0"
asgiref = "^3.8.1"
async-timeout = "^4.0.3"
attrs = "^24.2.0"
billiard = "^4.2.0"
black = "^24.8.0"
celery = "^5.4.0"
charset-normalizer = "^3.3.2"
click = "^8.1.3"
click-didyoumean = "^0.3.0"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
django = "^5.1.1"
django-celery-beat = "^2.4.0"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
django-timezone-field = "^7.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
exceptiongroup = "^1.1.0"
execnet = "^2.1.1"
flower = "^2.0.1"
gunicorn = "^23.0.0"
humanize = "^4.4.0"
idna = "^3.4"
iniconfig = "^2.0.0"
kombu = "^5.3.5"
mypy-extensions = "^1.0.0"
packaging = "^24.1"
pathspec = "^0.12.1"
platformdirs = "^4.3.3"
pluggy = "^1.0.0"
prometheus-client = "^0.20.0"
prompt-toolkit = "^3.0.36"
#psycopg2 = "^2.9.5"
pyjwt = "^2.6.0"
pytest = "^8.3.3"
pytest-django = "^4.5.2"
pytest-xdist = "^3.6.1"
python-crontab = "^3.2.0"
python-dateutil = "^2.8.2"
pytz = "^2024.2"
redis = "^5.0.8"
requests = "^2.32.3"
six = "^1.16.0"
soupsieve = "^2.3.2.post1"
sqlparse = "^0.5.1"
tomli = "^2.0.1"
tornado = "^6.2"
typing-extensions = "^4.8.0"
tzdata = "^2024.1"
urllib3 = "^2.2.3"
vine = "^5.0.0"
wcwidth = "^0.2.5"
pytest-dotenv = "^0.5.2"
xmltodict = "^0.13.0"
pymysql = "^1.1.0"
cryptography = "^43.0.1"
pre-commit = "^3.4.0"
manticoresearch = "^4.0.0"
certifi = "^2024.8.30"
postgis = "^1.0.4"
drf-spectacular = "^0.27.2"
pytest-mock = "^3.12.0"
publicdatareader = "^1.1.0"
pandas = "^2.1.4"
dependency-injector = "^4.41.0"
django-debug-toolbar = "^4.3.0"
whitenoise = "^6.6.0"
djangorestframework-gis = "^1.0"
psycopg2-binary = "^2.9.9"
importlib-metadata = "^8.5.0"

[tool.black]
line-length = 80
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
